<resources>
    <string name="app_name">Organization</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="login_welcome">Welcome</string>
    <string name="sign_in_to_your_accaount">Sign in to your accaunt</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="title_events">events</string>
    <string name="title_requests">requests</string>
    <string name="title_messages">messages</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_request">Create request</string>
    <string name="adding_request_request">Request</string>
    <string name="adding_request">adding request</string>
    <string name="name">Name</string>
    <string name="request_date">Date</string>
    <string name="average_sum">Average sum</string>
    <string name="number_of_events">Number of events hold</string>
    <string name="name_request">Name request</string>
    <string name="about_request">About request</string>
    <string name="add_request">Add request</string>
    <string name="internet_not_available">Internet not available</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="dont_have_account">Dont\'t have an account?</string>
    <string name="create">Create</string>
    <string name="sign_up">Sign up</string>
    <string name="your_email">Your email</string>
    <string name="your_name">Your name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="your_phone">Your phone</string>
    <string name="password">Password</string>
    <string name="your_password">Your password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="agree_with">By signen uo I agree with</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email_error">Please enter your email address!</string>
    <string name="incorrect_email">Incorrect email address!</string>
    <string name="phone_error">Please enter your mobile phone number!</string>
    <string name="incorrect_phone">Incorrect phone number!</string>
    <string name="password_error">Please enter your password.</string>
    <string name="repest_password_error">Please confirm your password.</string>
    <string name="confirm_password">The password and confirm password fields do not match.</string>
    <string name="initiator_name_error">Please enter your organization name.</string>
    <string name="email_error_exists">This email already exists!</string>
    <string name="password_error_count">Password must be greater than 6 characters.</string>
    <string name="name_request_error">Please, enter request name.</string>
    <string name="end">End</string>
    <string name="start">Start</string>
    <string name="event_name">Event name</string>
    <string name="title_activity_test_tub">Test_tub</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="detail">Datail</string>
    <string name="title_activity_events_tabbed_fragment">EventsTabbedFragment</string>
    <string name="events">Events</string>
    <string name="my_events">My events</string>
    <string name="requests">Requests</string>
    <string name="my_requests">My requests</string>
    <string name="date_request_error">Please enter date.</string>
    <string name="start_time_request_error">Please enter start time.</string>
    <string name="end_time_request_error">Please enter end time.</string>
    <string name="request_info_date">Request date</string>
    <string name="request_info_time">Request time</string>
    <string name="request_amount_part">Amount participants</string>
    <string name="amount_part_price">Price</string>
    <string name="number_of_events_held">Number of events held</string>
    <string name="request_number_of_events_held">Number</string>
    <string name="empty">Empty</string>
    <string name="initiator_name">Name</string>
    <string name="initiator_email">Email</string>
    <string name="photo_gallery">Photo gallery</string>
    <string name="add_photo">Add photo</string>
    <string name="profile">Profile</string>
    <string name="organization_name">Organization name</string>
    <string name="organization_email">Email</string>
    <string name="organization_phone">Phone</string>
    <string name="initiator_phone">Phone</string>
    <string name="initiator_address">Address</string>
    <string name="organization_address">Address</string>
    <string name="initiator_zip_code">Zip Code</string>
    <string name="organization_zip_code">Zip Code</string>
    <string name="about_us">About us</string>
    <string name="save">Save</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm">Confirm password</string>
    <string name="change">Change</string>
    <string name="restaurant_name">Name</string>
    <string name="restaurant_email">Email</string>
    <string name="possible_event_days">Possible event days *</string>
    <string name="working_sunday">Sunday</string>
    <string name="working_saturday">Saturday</string>
    <string name="working_friday">Friday</string>
    <string name="working_thursday">Thursday</string>
    <string name="working_wednesday">Wednesday</string>
    <string name="working_tuesday">Tuesday</string>
    <string name="working_monday">Monday</string>
    <string name="working_start">Start</string>
    <string name="working_end">End</string>
    <string name="description">* To create an event, the request must be sent at least two weeks before the event</string>
    <string name="donating_back">Donating back</string>
    <string name="about_restaurant">About restaurant</string>
    <string name="contact_us">Contact us</string>
    <string name="send_message">Send message</string>
    <string name="call">Call</string>
    <string name="edit">Edit</string>
    <string name="amount_participants">Amount participants</string>
    <string name="edit_request">Edit request</string>
    <string name="add_cover">add cover</string>
    <string name="request">Request</string>
    <string name="your_organization_name">Your organization name</string>
    <string name="organization_email_1">Organization email</string>
    <string name="your_organization_email">Your organization email</string>
    <string name="your_organization_phone">Your organization phone</string>
    <string name="organization_phone_1">Organization phone</string>
    <string name="organization_zip_code_1">Organization zip code</string>
    <string name="your_organization_zip_code">Your organization zip code</string>
    <string name="agree_with_terms_error">Please agree with terms</string>
    <string name="agree_with_terms">I agree with terms.</string>
    <string name="organization_address_1">Organization address</string>
    <string name="example_your_organization_name">Example Washingtone university of Virginia</string>
    <string name="example_your_organization_email">Example info@wuv.edu</string>
    <string name="example_your_organization_phone">Example: +1 703 335 5904</string>
    <string name="example_your_organization_zip_code">Example 22003</string>
    <string name="example_your_organization_address">Example 4300 evergreen Lane Annandale, VA</string>
    <string name="logout">logout</string>
    <string name="past_message">past message</string>
    <string name="last_message">last message</string>
    <string name="time">time</string>
    <string name="message">Message...</string>
    <string name="last_seen_time">last seen time</string>
    <string name="channel_name">channel_name</string>
    <string name="channel_description">channel_description</string>
    <string name="date">date</string>
    <string name="event_offers">Event offers</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="search">Search</string>
    <string name="dont_have_events">Don\'t have events</string>
    <string name="search_by_name">Search by name</string>
    <string name="search_by_zip_code">Search by zip code</string>
</resources>
