<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@drawable/login_background"
    tools:context=".ui.login.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:layout_gravity="center_horizontal"
            android:textSize="44sp"
            android:layout_marginTop="30dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="4"
            android:shadowDy="0"
            android:fontFamily="@font/roboto_regular"
            android:shadowRadius="4"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_main_photo"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_your_account"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="20sp"
            android:textColor="@color/second_white"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_email"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/white"
            android:layout_gravity="center_horizontal"
            android:hint="@string/prompt_password"
            android:backgroundTint="@color/white"
            android:textColor="@color/white"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"/>
        <Button
            android:id="@+id/login"
            android:layout_width="156dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/login_button_border"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:enabled="false"
            android:text="@string/action_sign_in" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dont_have_account"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:alpha="0.6"/>
            <TextView
                android:id="@+id/create_initiator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:layout_marginStart="5dp" />
        </LinearLayout>
    </LinearLayout>
    <!--<ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />-->
</android.support.constraint.ConstraintLayout>