<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@color/white"
    android:orientation="horizontal"
    android:layout_marginTop="1dp">

<<<<<<< HEAD
    <de.hdodenhof.circleimageview.CircleImageView
=======
    <ImageView
        android:id="@+id/conversation_img"
>>>>>>> c5c34df6e3dc4fa125cd0d4141db006caf73f95e
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="15dp"
        android:src="@drawable/photo"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/conversation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/conservation_name"/>
        <TextView
            android:id="@+id/conversation_last_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_message"
            android:textSize="11sp"
            android:textColor="@color/conversation_last_message"/>
    </LinearLayout>

    <TextView
        android:id="@+id/conversations_last_message_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:gravity="end|top"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:textSize="9sp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/conservation_time"/>

</LinearLayout>
