<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="15dp">

    <ImageView
        android:id="@+id/event_offer_main_image"
        android:layout_width="140dp"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/no_photo"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/restaurant_name"
        android:fontFamily="@font/roboto_bold"
        android:layout_toEndOf="@id/event_offer_main_image"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/event_start_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/event_offer_main_image"
        android:layout_below="@id/restaurant_name"
        android:text="@string/name"
        android:textSize="8sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/special_grey"
        android:drawableStart="@drawable/icon_time"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"/>

    <TextView
        android:id="@+id/event_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/event_offer_main_image"
        android:layout_below="@id/event_start_end_time"
        android:text="@string/name"
        android:textSize="8sp"
        android:fontFamily="@font/roboto_medium"
        android:textColor="@color/special_grey"
        android:drawableStart="@drawable/icon_event_date"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:drawablePadding="5dp"/>

    <Button
        android:id="@+id/accept_event_button"
        android:layout_width="79.22dp"
        android:layout_height="22dp"
        android:layout_toEndOf="@+id/event_offer_main_image"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/event_end_margin"
        android:layout_marginBottom="8dp"
        android:background="@drawable/accept_button_radius"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/green"
        android:layout_marginStart="10dp"
        android:textSize="10sp"
        android:text="@string/accept"/>


    <Button
        android:id="@+id/cancel_event_button"
        android:layout_width="79.22dp"
        android:layout_height="22dp"
        android:layout_toRightOf="@+id/accept_event_button"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="@dimen/event_end_margin"
        android:layout_marginBottom="8dp"
        android:background="@drawable/cancel_button_radius"
        android:textAllCaps="false"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/orange_red"
        android:textSize="10sp"
        android:text="@string/cancel"/>

    <ImageView
        android:id="@+id/event_calendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/event_end_margin"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_event_calendar" />

</RelativeLayout>
